# boat_navigation

./: README.md  package.xml  setup.cfg  setup.py
launch/: cam_launch.launch.py
scripts/: start_microxrce.sh
